[project]
name = "ontoloviz"
version = "2.0.2"
description = "OntoloViz drug- and phenotype-ontology visualization GUI"
authors = [
    {name = "Matthias Ley", email = "matthias.ley@delta4.ai"},
]
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
license = "MIT"
keywords = ["MeSH", "ATC", "ontology", "visualization", "sunburst", "drug", "phenotype", "GUI"]
requires-python = ">=3.9,<4.0"
dependencies = [
    "plotly>=5.15.0",
    "openpyxl>=3.1.2",
    "packaging>=23.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
web = [
    "dash>=3.0.3",
    "dash-bootstrap-components>=2.0.1",
    "pandas>=2.2.3",
]

[project.urls]
"Repository" = "https://github.com/Delta4AI/OntoloViz"
"Bug Tracker" = "https://github.com/Delta4AI/OntoloViz/issues"
"Releases" = "https://github.com/Delta4AI/OntoloViz/releases"

[project.scripts]
ontoloviz = "ontoloviz.app:run_app"
ontoloviz-web = "ontoloviz.web:run_webapp"

[build-system]
requires = ["setuptools>=80.8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ontoloviz*"]

[tool.setuptools.package-data]
ontoloviz = ["assets/*"]
